--- a/WebContent/addTeacherMsg.html
+++ b/WebContent/addTeacherMsg.html
@@ -148,8 +148,9 @@ body {
 	<div id="top_div">
 		<img src="images/logo.gif" />
 	</div>
-	<div id="userInfo" align="left">
-		登录用户：<br /> 登录时间：
+	<div align="left">
+	<img src="upload/bird.jpg" >
+		登录用户： 登录时间：
 	</div>
 	<div id="border_div"></div>
 	<div id="middle_div">
