--- a/WebContent/changeProMsg.html
+++ b/WebContent/changeProMsg.html
@@ -155,8 +155,10 @@ body {
 		</div>
 	</div>
 	<div align="left">
-		<img src="upload/bird.jpg" >
-		<span>登录用户：登录时间：</span>
+		<img src="upload/bird.jpg" style="padding-left: 10px"> <i
+			style="position: absolute; margin-top: 10px">登陆用户:<span
+			id="wangName"></span></i> <i style="position: absolute; margin-top: 42px">登陆时间:<span
+			id="wangTime"></span></i>
 	</div>
 	<div id="border_div"></div>
 	<div id="middle_div">
@@ -164,34 +166,35 @@ body {
 
 			<div class="title_div">人员管理</div>
 			<ul>
-				<li><a href="addTeacherMsg.html" target="mainFrame">添加人员信息</a></li>
-				<li><a href="teacherManager.html" target="mainFrame">人员信息管理</a></li>
+				<li><a href="addTeacherMsg.html" id="mainFrame">添加人员信息</a></li>
+				<li><a href="teacherManager.html"id="mainFrame">人员信息管理</a></li>
 			</ul>
 			<div class="title_div">班级管理</div>
 			<ul>
-				<li><a href="#" target="mainFrame">添加班级信息</a></li>
-				<li><a href="#" target="mainFrame">班级信息管理</a></li>
+				<li><a href="gradeadd.html" id="mainFrame">添加班级信息</a></li>
+				<li><a href="grade.html" id="mainFrame">班级信息管理</a></li>
 			</ul>
 			<div class="title_div">学生管理</div>
 			<ul>
-				<li><a href="#" target="mainFrame">添加学生信息</a></li>
-				<li><a href="" target="mainFrame">学生信息管理</a></li>
+				<li><a href="#" id="mainFrame">添加学生信息</a></li>
+				<li><a href="#" id="mainFrame">学生信息管理</a></li>
 			</ul>
 			<div class="title_div">考勤管理</div>
 			<ul>
-				<li><a href="#" target="mainFrame">考勤信息管理</a></li>
+				<li><a href="#" id="mainFrame">考勤信息管理</a></li>
 			</ul>
 			<div class="title_div">就业管理</div>
 			<ul>
-				<li><a href="#" target="mainFrame">添加就业信息</a></li>
-				<li><a href="#" target="mainFrame">就业信息管理</a></li>
+				<li><a href="addStudentMsg.html" id="mainFrame">添加就业信息</a></li>
+				<li><a href="starstudentmsg.html" id="mainFrame">就业信息管理</a></li>
 			</ul>
 			<div class="title_div">系统管理</div>
 			<ul>
-				<li><a href="changeProMsg.html" target="mainFrame">修改个人信息</a></li>
-				<li><a href="#" target="mainFrame">修改密码</a></li>
-				<li><a href="#" target="mainFrame">修改用户名</a></li>
-				<li><a href="#" target="_top">退出系统</a></li>
+				<li><a href="changeProMsg.html" id="mainFrame">修改个人信息</a></li>
+				<li><a href="ReviseTcherPwd.html"id="mainFrame" >修改密码</a></li>
+				<li><a href="ReviseAdminName.html"id="mainFrame">修改用户名</a>
+				</li>
+				<li><a href="#" target="_top" id="goodBye">退出系统</a></li>
 			</ul>
 		</div>
 		<div style="height: 60px"></div>
@@ -201,31 +204,29 @@ body {
 				<div style="height: 30px"></div>
 				<form action="teacher/upload" method="post"
 					enctype="multipart/form-data">
-					<table>
+					<table class="table table-condensed table-hover">
 						<tr>
 							<td hidden="hidden"><input type="file" name="myfille"
 								id="upload"></td>
 						</tr>
 						<tr>
-							<td><span class="img"><img src="upload/bird.jpg"></span></td>
-							<td><input type="button" value="修改头像" id="uploadbtn">(60*75)</td>
+							<td><span><img class="img" src="upload/bird.jpg" style="padding-left: 10px"></span></td>
+							<td><input type="button" value="修改头像" id="uploadbtn">(60*60)</td>
 							<td><input type="submit" value="提交" id="imgbtn"></td>
 						</tr>
 					</table>
 				</form>
-				<div style="height: 30px"></div>
-
-				<table>
+				<table class=" table-condensed table-hover" align ="center">
 					<tr>
 						<td>姓名:</td>
 						<td><input type="text" id="name" name="name"></td>
 					</tr>
 					<tr>
-						<td>电话:</td>
+						<td>* 电话:</td>
 						<td><input type="text" id="tel" name="phone"></td>
 					</tr>
 					<tr>
-						<td>地址:</td>
+						<td>* 地址:</td>
 						<td><input type="text" id="address" name="address"></td>
 					</tr>
 					<tr>
@@ -273,9 +274,7 @@ body {
 				} else if (msg == "-1") {
 					alert("服务器异常")
 				} else {
-					var url = "<img src="+msg+">"
-					$(".img").children().remove
-					$(".img").append(url)
+					$(".img").attr("src",msg);
 				}
 			}
 		})
@@ -332,4 +331,46 @@ body {
 		loadImage();
 		setPageSize();
 	}
+	//左上角显示老师姓名和登录时间
+	$(window).load(function() {
+		$.ajax({
+			type : "POST",
+			url : "summer/getCookie",
+			// data: "uName="+uName+"&uPwd="+uPwd+"&ck="+ck,
+			success : function(data) {
+				if (data == "-1") {
+					//alert("进入登录页")
+					window.location.href = "LoginTest.html";
+				}
+			}
+		});
+		var time = new Date().toLocaleString();
+		$.ajax({
+			type : "GET",
+			url : "summer/getTeacherName",
+			success : function(data) {
+				$("#wangName").text(data + " 老师")
+				$("#wangTime").text(time)
+				if (data != "-100") {
+					userName = data;
+				} else {
+					window.location.href = "LoginTest1.html";
+				}
+				//var users=$.parseJSON(data)
+				//for(var i=0;i<users.length;i++){
+				//alert(users[i].userName)
+				//}
+			}
+		});
+	});
+	$("#goodBye").click(function() {
+		$.ajax({
+			type : "POST",
+			url : "summer/goodBye",
+			//data: "uName="+uName,
+			success : function(data) {
+				window.location.href = "LoginTest.html";
+			}
+		});
+	})
 </script>
